--- a/Pricing Panel/index.html
+++ b/Pricing Panel/index.html
@@ -13,7 +13,7 @@
     <section>
         <div class="row">
             <div class="column">
-                <img src="mail.png" alt="Paper plane in the sky">
+                <img src="icon1.png" alt="Paper plane in the sky">
                 <h3>Personal</h3>
                 <p>Custom Domains</p>
                 <p>Sleep after 30 mins of inactivity</p>
@@ -21,7 +21,7 @@
                 <button>Sign Up</button>
             </div>
             <div class="column">
-                <img src="airplane.png" alt="Airplane in the sky">
+                <img src="icon2.png" alt="Airplane in the sky">
                 <h3>Small Team</h3>
                 <p>Never Sleeps</p>
                 <p>Multiple workers for more powerful apps</p>
@@ -29,7 +29,7 @@
                 <button id="selected">Free Trial</button>
             </div>
             <div class="column">
-                <img src="world.png" alt="Around the World">
+                <img src="icon3.png" alt="Around the World">
                 <h3>Enterprise</h3>
                 <p>Dedicated</p>
                 <p>Simple Horizontal Scalability</p>
